kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: osticket
  labels:
    name: osticket
    app: osticket
